отформатировал разделы, добавил обзор Ирины

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{krctran}
+\usepackage{textcomp}
 
 \begin{document}
 
@@ -9,8 +10,8 @@
 \rustitle{Обзор методов (уточнить - каких?) \newline по решению задачи разрешения лексической многозначности}
 \engtitle{Word-sense disambiguation methods (specific?) review}
 
-\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов}
-\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov}
+\rusauthor{С.~С.~Ткач, Е.~А.~Ярышкина, А.~Н.~Кирилов, И.~А.~Сихонина}
+\engauthor{S.~S.~Tkach, E.~A.~Yaryshkina, A.~N.~Kirilov, I.~A.~Sikhonina}
 
 
 \organization{Институт прикладных математических исследований Карельского научного центра РАН}
@@ -109,7 +110,47 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 \end{figure}
 \efullwidth
 
-\section{Обзор статьи  <<Resolving Ambiguities in Biomedical Text With Unsupervised Clustering Approaches>>}
+\section{WSD-методы с учителем}
+
+\section{<<WSD на основе нейронных сетей, построенных по данным машиночитаемых словарей>>}
+
+\begin{flushright}
+\textit{А. Н. Кирилов}
+\end{flushright}
+
+\parindent=0,5cm
+
+Настоящий текст является рефератом статьи \cite{VERONIS 
+1990}, в которой описан метод автоматического построения очень больших нейронных сетей (VLNN) с помощью текстов, извлекаемых из машинно-читаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности (WSD). 
+
+\parindent=0,5cm
+
+В дальнейшем будем называть слова, смысл которых требуется установить целевыми словами. 
+
+\parindent=0,5cm
+
+Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой <<степени пересечения>>, т.е.  количества общих слов в словарных определениях слов из контекста (“окна”) условного размера, содержащего целевое слово. Основной недостаток метода Леска -- зависимость  от  словарной  статьи, т.е. от слов, входящих в нее. Стратегия преодоления  этого  недостатка -- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит в основе топологии (строения) VLNN.
+
+\parindent=0,5cm
+
+Использование нейронных сетей  для WSD  было предложено в работах \cite{COTTRELL 1983,WALTZ 1985}.   В рассматриваемой  статье для построения  VLNN использован  словарь  Collins  English  Dictionary.
+
+\parindent=0,5cm
+
+Топология сети. Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные смыслы слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей определению данного смысла. Процесс соединения повторяется многократно, создавая большую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10 -- 20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные смыслы данного слова, соединены запрещающими (подавляющими) связями.
+
+\parindent=0,5cm
+
+Алгоритм функционирования сети. При запуске сети первыми активируются узлы входного  слова, которое кодируется согласно принятому правилу. Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его смыслов получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих смыслов посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-смыслов,  одновременно  уменьшая  активацию  узлов  соответствующих неправильным смыслам. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-смыслы с наиболее активированными связями  с    узлами-словами. В статье  не  указан  алгоритм  настройки, т.е.  обучения  сети.  Видимо,  используется  метод  встречного  распространения (back  propagation).
+
+\section{WSD-методы без учителя}
+
+\section{<<Разрешение многозначности в биомедицинских текстах с помощью методов кластеризации без учителя>>}
+
+\begin{flushright}
+\textit{Е. А. Ярышкина} 
+\end{flushright}
+
 В статье \cite{Savova 2005} изучаются уже существующие методы кластеризации без учителя и их эффективность для решения лексической многозначности при обработке текстов по биомедицине. Решение проблем лексической многозначности в данной области включает в себя не только традиционные задачи присвоения ранее определенных смысловых значений для терминов, но так же и обнаружения новых значений для них, ещё не включённых в данную онтологию.
 \parindent=0,5cm
 
@@ -144,33 +185,90 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 
 Использование целиком текста аннотации статьи в качестве контекста приводит к лучшим результатам, чем использование отдельных предложений. С одной стороны, большой объем контекста, представленный аннотацией, дает богатую коллекцию признаков, с другой стороны, в коллекции WSD представлено небольшое число контекстов.
 
-\section{Реферат статьи  <<Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries >>}
+\section{WSD-методы, основанные на знаниях}
+\section{<<Построение сочетаемостных ограничений на основе Байесовских сетей для разрешения многозначности>>}
+\begin{flushright}
+\textit{И. А. Сихонина} 
+\end{flushright}
 
+В статье \cite{Ciaramita 2000} представлена Байесовская модель, применяемая для разрешения лексической многозначности глаголов. Авторы рассматривают такое понятие, как сочетаемостные ограничения (selectional preferences). \textit{Сочетаемостные ограничения} (далее SP) -- это закономерности использования глагола относительно семантического класса его параметров (субъект, объект (прямое дополнение) и косвенное дополнение).
 \parindent=0,5cm
 
-Настоящий текст является рефератом статьи \cite{VERONIS 
-1990}, в которой описан метод автоматического построения очень больших нейронных сетей (VLNN) с помощью текстов, извлекаемых из машинно-читаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности (WSD). 
-
+Модели автоматического построения SP важны сами по себе и имеют приложения в обработке естественного языка. Сочетаемостные ограничения глагола могут применяться для получения возможных значений неизвестного параметра при известных глаголах; например, из предложения \textit{<<Осенние хххх жужжали и бились на стекле>>} легко определить, что “xxxx” -- мухи. При построении предложения SP позволяют отранжировать варианты и выбрать лучший среди них. Исследование SP могло бы помочь в понимании структуры ментального лексикона. 
 \parindent=0,5cm
 
-В дальнейшем будем называть слова, смысл которых требуется установить целевыми словами. 
-
+Системы обучения SP без учителя обычно комбинируют статистические подходы и подходы, основанные на знаниях. Компонент базы знаний (здесь WordNet \cite{Miller 1990}) -- это обычно база данных, в которой слова сгруппированы в классы. 
 \parindent=0,5cm
 
-Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой <<степени пересечения>>, т.е.  количества общих слов в словарных определениях слов из контекста (“окна”) условного размера, содержащего целевое слово. Основной недостаток метода Леска -- зависимость  от  словарной  статьи, т.е. от слов, входящих в нее. Стратегия преодоления  этого  недостатка -- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит в основе топологии (строения) VLNN.
-
+Статистический компонент состоит из пар предикат-аргумент, извлечённых из неразмеченного корпуса. В тривиальном алгоритме можно было бы получить список слов (прямых дополнений глагола), и для тех слов, которые есть в WordNet, вывести их семантические классы. В работе \cite{Ciaramita 2000} семантическим классом называется синсет (группа синонимов) тезауруса WordNet, то есть класс соответствует одному из значений слова. Таким образом, в тривиальном алгоритме на основе данных WordNet можно выбрать классы (значения слов), с которыми употребляются (встречаются в корпусе) глаголы.
 \parindent=0,5cm
 
-Использование нейронных сетей  для WSD  было предложено в работах \cite{COTTRELL 1983,WALTZ 1985}.   В рассматриваемой  статье для построения  VLNN использован  словарь  Collins  English  Dictionary.
-
+Например, если в исходном корпусе текстов глагол \textit{ползать} употребляется со словом \textit{ящерица}, принадлежащим классу РЕПТИЛИИ, то в модели построения SP будет записано, что <<глагол \textit{ползать} употребляется со словами из класса РЕПТИЛИИ>>. Если слово \textit{крокодил}, во-первых, также встречается в тексте с глаголом \textit{ползать}, во-вторых, слово \textit{крокодил} принадлежит сразу двум классам: РЕПТИЛИЯ и ВЕРТОЛЁТ, то из этого следует, что модель SP будет расширена информацией о том, что «глагол \textit{ползать} употребляется со словами из классов и РЕПТИЛИЯ, и ВЕРТОЛЁТ».
 \parindent=0,5cm
 
-Топология сети. Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные смыслы слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей определению данного смысла. Процесс соединения повторяется многократно, создавая большую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10 -- 20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные смыслы данного слова, соединены запрещающими (подавляющими) связями.
-
+В ранее разработанных моделях (Резник (1997) \cite{Resnik 1997}, Абни и Лайт (1999) \cite{Abney 1999}) было обнаружено, что главная трудность в таком тривиальном алгоритме -- это наличие неоднозначных слов в обучающих данных. В тех же работах (\cite{Resnik 1997}, \cite{Abney 1999}) были предложены более сложные модели, в которых предполагается, что все значения многозначных слов появляются с одинаковой частотой. 
 \parindent=0,5cm
 
-Алгоритм функционирования сети. При запуске сети первыми активируются узлы входного  слова, которое кодируется согласно принятому правилу. Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его смыслов получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих смыслов посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-смыслов,  одновременно  уменьшая  активацию  узлов  соответствующих неправильным смыслам. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-смыслы с наиболее активированными связями  с    узлами-словами. В статье  не  указан  алгоритм  настройки, т.е.  обучения  сети.  Видимо,  используется  метод  встречного  распространения (back  propagation).    
+\textbf{Байесовские сети} или Байесовские сети доверия (БСД) состоят из множества переменных (вершин) и множества ориентированных ребер, соединяющих эти переменные. Такой сети соответствует ориентированный ацикличный граф. Каждая переменная может принимать одно из конечного числа взаимоисключающих состояний. Пусть все переменные будут бинарного типа, то есть принимают одно из двух значений: истина или ложь. Любой переменной \textit{А} с родителями \textit{В1, …, Вn} соответствует таблица условных вероятностей (conditional probability table, далее CPT).
+\parindent=0,5cm
 
+Например, построим SP для глагола \textit{ползать} и сеть на рисунке ~\ref{ris1} будет базой знаний.
+\begin{figure}[H]
+    \includegraphics[keepaspectratio=true,width=0.9\columnwidth]{fig_1.jpg}
+    \caption{Байесовская сеть для многозначного существительного \textit{крокодил}}
+    \label{ris1}
+\end{figure}
+\parindent=0,5cm
+
+Глагол \textit{ползать} употребляется со словами \textit{крокодил} и \textit{ящерица}. Переменные ВЕРТОЛЁТ и РЕПТИЛИЯ соответствуют более общим абстрактным значениям, переменные \textit{крокодил} и \textit{ящерица} являются более узкими, конкретными значениями. Переменная РЕПТИЛИЯ может принимать одно из двух значений, соответствующих словам \textit{крокодил} и \textit{ящерица}, именно эту задачу определения значения и нужно решить.
+
+\begin{table}[H]
+\centering
+\caption{Условные вероятности переменных \textit{крокодил} и \textit{ящерица} в зависимости от значений переменных ВЕРТОЛЁТ и РЕПТИЛИЯ, где (В, Р, к, я -- это аббревиатуры слов ВЕРТОЛЁТ, РЕПТИЛИЯ, \textit{крокодил} и \textit{ящерица})}
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+" " & \multicolumn{4}{|c|}{\textit{Р}(\textit{X = x}|\textit{Y_1 = y_1, Y_2 = y_2})} \\
+\hline
+" " & В,Р & В,\textlnot Р & \textlnot В,Р & \textlnot В, \textlnot Р\\
+\hline
+к = \textit{true} & 0,99 & 0,99 & 0,99 & 0,01\\
+к = \textit{false} & 0,01 & 0,01 & 0,01 & 0,99\\
+\hline
+я = \textit{true} & 0,99 & 0,99 & 0,01 & 0,01\\
+я = \textit{false} & 0,01 & 0,01 & 0,99 & 0,99\\
+\hline
+\end{tabular}
+\label{tbl1}
+\end{table}
+
+\parindent=0,5cm
+При построении таблицы ~\ref{tbl1} условных вероятностей (CPT), учтём следующие предположения:
+
+\begin{itemize}
+\item вероятность, что выбираем какой-либо из концептов (ВЕРТОЛЁТ и РЕПТИЛИЯ) очень мала, то есть \textit{P}(\textit{В=true}) = \textit{P}(\textit{Р=true}) = 0,01, следовательно, велика вероятность, что концепты не выбраны: \textit{P}(\textit{В=false}) = \textit{P}(\textit{Р= false}) = 0,99;
+\item если какой-либо из концептов истинен (В, Р), то <<выпадает>> слово \textit{крокодил};
+\item если концепт РЕПТИЛИЯ истинен, то растут шансы встретить слово \textit{ящерица};
+\end{itemize}
+\parindent=0,5cm
+
+Из таблицы ~\ref{tbl1} вероятности появления слов следует вывод, что использование разу двух значений слова \textit{крокодил (рептилия и вертолёт МИ-24)} маловероятно. Вероятность использования значения РЕПТИЛИЯ намного больше чем значения ВЕРТОЛЁТ. Таким образом гипотеза <<вертолёт>> <<отброшена>> (“explaining away”).
+\parindent=0,5cm
+
+\textbf{Байесовские сети для построения SP.} Иерархия существительных в WordNet представлена в виде ориентированного ацикличного графа. Синсет узла принимает значение <<истина>>, если глагол <<выбирает>> существительное из набора синонимов. Априорные вероятности задаются на основе двух предположений: во-первых, маловероятно, что глагол будет употребляться только со словами какого-то конкретного синсета, и во-вторых, если глагол действительно употребляется только со словами из данного синсета (например, синсет ЕДА), тогда должно быть правомерным употребление этого глагола с гипонимами этого синсета (например, ФРУКТ).
+\parindent=0,5cm
+
+Те же предположения (что для синсетов) верны и для употреблений слов с глаголами:
+\begin{enumerate}
+\item слово, вероятно, является аргументом глагола в том случае, если глагол употребляется с каким-либо из значений этого слова;
+\item отсутствие связки глагол-синсет говорит о малой вероятности того, что слова этого синсета употребляются с глаголом;
+\end{enumerate}
+\parindent=0,5cm
+
+Словам <<вероятно>> и <<маловероятно>> должны быть приписаны такие числа, сумма которых равна единице. 
+\parindent=0,5cm
+
+Находкой работы \cite{Ciaramita 2000} является разъяснение стратегии “explaining away”, то есть отбрасывание маловероятных значений слов при построении сочетаемостных ограничений. Такая стратегия является неотъемлемым свойством Байесовских сетей и Байесовского вывода, полезным свойством при разрешении лексической многозначности. 
+ 
 
 \section{Библиография}
 Библиографические ссылки принято оформлять в виде [номер], в отличие от
@@ -364,14 +462,26 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{epr:website}
 \textit{Епрев, А. С.}Применение контекстных векторов в классификации текстовых документов. 2010. http://jre.cplire.ru/iso/oct10/1/text.html
 
+\bibitem{Abney 1999}
+\textit{Abney, S. and Light, M.}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999. 
+
+\bibitem{Ciaramita 2000}
+\textit{Ciaramita, M. and Johnson, M.}Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. 2000. 
+
 \bibitem{COTTRELL 1983}
 \textit{COTTRELL, G. W. and SMALL, S. L.}A connectionist  scheme for modelling word  sense  disambiguation -- Cognition and brain theory. 1983. № 6. P. 89–120. 
 
 \bibitem{LESK 1986}
 \textit{LESK, M.}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26.  
 
+\bibitem{Miller 1990}
+\textit{Miller, G.}Wordnet: An on-line lexical database. International Journal of Lexicography, 3(4). 1990.
+
 \bibitem{Pedersen 1997}
 \textit{Pedersen, T. and Bruce, R.}Distinguishing word senses in untagged text. Proc.EMNLP.Providence, RI, 1997.
+
+\bibitem{Resnik 1997}
+\textit{Resnik, P.}Selectional preference and sense disambiguation. In Proceedings of the ANLP-97 Workshop: Tagging Text with Lexical Semantics: Why, What, and How? 1997.
 
 \bibitem{Savova 2005}
 \textit{Savova, G.} Resolving ambiguities in biomedical text with unsupervised clustering approaches. University of Minnesota Supercomputing Institute Research Report, 2005.
@@ -442,11 +552,30 @@ tel.: (8142) 763370
 \end{aboutauthors}
 
 \begin{aboutauthors}
+\authorsname{Сихонина Ирина Александровна}
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: +7(8142) 71-10-78\\
+syawenka@mail.ru
+
+\columnbreak
+
+\authorsname{Sikhonina, Irina}
+Student\\
+Faculty of Mathematics\\
+Petrozavodsk State University\\
+Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
+tel.: +7(8142) 71-10-78\\
+syawenka@mail.ru 
+\end{aboutauthors}
+
+\begin{aboutauthors}
 \authorsname{Ткач Станислав Сергеевич}
 Математический факультет\\ 
 Петрозаводский государственный университет\\
 пр-кт Ленина, 33, Петрозаводск, Республика Карелия\\
-тел.: (8953) 547-70-43\\
+тел.: +7 (8142) 71-10-78\\
 tkachkras@gmail.com
 
 \columnbreak
@@ -456,7 +585,7 @@ Student\\
 Faculty of Mathematics\\
 Petrozavodsk State University\\
 Prospect Lenina, 33, Petrozavodsk, Republic of Karelia\\
-tel.: (8953) 547-70-43\\
+tel.: +7 (8142) 71-10-78\\
 tkachkras@gmail.com 
 \end{aboutauthors}
 
