Добавил обзор Анны

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{krctran}
 \usepackage{textcomp}
+\usepackage{xcolor}
 
 \begin{document}
 
@@ -144,6 +145,92 @@ this text as a template. This paragraph is formatted as an Abstract of the artic
 Алгоритм функционирования сети. При запуске сети первыми активируются узлы входного  слова, которое кодируется согласно принятому правилу. Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его смыслов получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих смыслов посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-смыслов,  одновременно  уменьшая  активацию  узлов  соответствующих неправильным смыслам. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-смыслы с наиболее активированными связями  с    узлами-словами. В статье  не  указан  алгоритм  настройки, т.е.  обучения  сети.  Видимо,  используется  метод  встречного  распространения (back  propagation).
 
 \section{WSD-методы без учителя}
+
+\section{<<Различение значений слов на основе векторов свойств, расширенных словарными толкованиями>>}
+
+\begin{flushright}
+\textit{А. Спирикова} 
+\end{flushright}
+
+Амрута Пурандаре и Тед Педерсен в 2004 году разработали "Алгоритм различения значений на основе контекстных векторов" (Сontext vector sense discrimination) \cite{Purandare 2004}. В этом алгоритме (1) берется набор примеров употреблений исследуемого слова, (2) выполняется кластеризация этих примеров так, чтобы близкие по значению или связанные каким-либо образом слова объединились в одну группу \cite{Purandare 2004}.
+\parindent=0,5cm
+
+\textit{Различение значений слов} (word sense discrimination) -- это задача группировки нескольких употреблений данного слова в кластеры, где каждому кластеру соответствует определенное значение целевого слова. Подходы к решению этой проблемы основываются на дистрибутивной гипотезе, которая говорит о том, что: лингвистические единицы, встречающиеся в схожих контекстах, имеют близкие значения. Следует различать понятия \textit{различение значений слов} и \textit{разрешение лексической многозначности}. При \textit{различении значений слов} нет никаких предопределённых значений слова, присоединенных к кластерам; здесь, скорее, слова, употребляющиеся в схожих контекстах, группируются в кластеры (значения).
+\parindent=0,5cm
+
+При решении задачи \textit{различения значений} используются контекстные вектора: если целевое слово встречается в тестовых данных, то контекст этого слова представляется в виде вектора контекста. \textit{Вектор контекста} -- это средний вектор по векторам свойств каждого из слов контекста. \textit{Вектор свойств} содержит информацию о совместной встречаемости данного слова с другими словами, этот вектор строится по данным корпуса текстов на этапе обучения.
+\parindent=0,5cm
+
+Метод различения значений Пурандаре и Педерсена \cite{Purandare 2004} предназначен для работы при недостаточном объёме текстовых данных, при этом вектор свойств расширяется данными, извлечёнными из толкований словарей.
+\parindent=0,5cm
+Этот метод группирует в кластеры близкие по значению употребления целевого слова.
+\parindent=0,5cm
+
+\textbf{Построение матрицы встречаемости слов.} Первоначально строится матрица совместной встречаемости слов по данным обучающего корпуса (здесь тексты Wall Street Journal и Британского национального корпуса).
+\parindent=0,5cm
+
+Вектор свойств (строка матрицы) содержит информацию о совместной встречаемости данного слова с другими. Было решено в \cite{Purandare 2004}, что слова <<встречаются>>, если они находятся в тексте на расстоянии не более пяти словопозиций (то есть между ними находится не более трёх слов). 
+\parindent=0,5cm
+
+\textbf{Обработка матрицы.} После создания матрицы выполняется разделение тестовых данных, то есть группировка примеров употреблений (фраз) с целевым словом. Каждому слову в примере употребления  в тестовых данных соответствует вектор свойств из матрицы встречаемости. Средний вектор свойств по всем словам соответствует вектору контекста. Таким образом, набор тестовых данных, включающих употребление исследуемого слова, преобразуется в набор контекстных векторов, каждый из которых соответствует одному из употреблений целевого слова.
+\parindent=0,5cm
+
+Различение значений происходит путем кластеризации контекстных векторов с помощью разделяющего (partitional) или иерархического <<сверху вниз>> (agglomerative) алгоритма кластеризации \cite{Jain 1999}, \cite{Jain 1988}, \cite{Zhao 2002}.  Получающиеся кластеры составлены из употреблений близких по значению фраз, и каждый кластер соответствует отдельному значению целевого слова. 
+\parindent=0,5cm
+
+\textbf{Векторы свойств, расширенные текстами толкований из словаря.} Векторы свойств, полученные по небольшому корпусу текстов, имеют очень малую размерность (несколько сотен), что не позволяет полностью описать закономерности совместной встречаемости слов. Для решения этой проблемы векторы свойств слов расширяются содержательными словами (content words), извлеченными из словарных толкований разных значений данного слова. В таблице ~\ref{tbl2} представлены примеры толкований и содержательные слова для восьми значений слова <<история>> из Русского Викисловаря.
+
+\bfullwidth
+\begin{table}[H]
+\centering
+\caption{Словарные толкования (и содержательные слова) по данным статьи <<история>> из Русского Викисловаря. Серым цветом и курсивом выделены те слова, которые уже были в векторе слов, чёрным – новые слова из толкований, которыми будет расширен вектор.}
+\begin{tabular}{|c|m{10cm}|m{5cm}|}
+
+\hline
+№ & Текст значения & Содержательные слова\\
+\hline
+1 & закономерное, последовательное развитие, изменение действительности & \textit{\textcolor{gray}{развитие,}} изменение\\
+\hline
+2 & наука, изучающая факты, тенденции и закономерности развития человеческого общества & \textit{\textcolor{gray}{наука,}} факт, тенденция, закономерность\\
+\hline
+3 & наука, изучающая ход развития, последовательные изменения какой-либо области природы или культуры & \textit{\textcolor{gray}{наука, развитие,}} изменение\\
+\hline
+4 & последовательный ход развития, изменения чего-либо, совокупность фактов о развитии какого-либо явления & \textit{\textcolor{gray}{развитие,}} изменение, факт\\
+\hline
+5 & отдалённое время с его событиями, происшествиями; прошлое & время, событие, происшествие\\
+\hline
+6 & эпическое повествование, рассказ & повествование, \textit{\textcolor{gray}{рассказ}}\\
+\hline
+7 & смешная или неожиданная ситуация, происшествие, случай & ситуация, случай, происшествие\\
+\hline
+8 & скандал, неприятность & скандал, неприятность\\
+\hline
+\end{tabular}
+\label{tbl2}
+\end{table}
+\efullwidth
+
+\parindent=0,5cm
+
+Предположим, например, что вектор свойств (столбец в матрице встречаемости) для слова \textit{история} имеет непустые значения в строках, соответствующих словам: \textit{книга, мир, наука, образование, развитие, рассказ.}
+\parindent=0,5cm 
+
+В русском Викисловаре различные значения слова \textit{история} (таблица ~\ref{tbl2}) включают содержательные слова: \textit{время, закономерность, изменение, наука, неприятность, повествование, происшествие,} развитие, рассказ, \textit{ситуация, скандал, случай, событие, тенденция, факт.} Таким образом, вектор свойств, соответствующий слову <<история>>, будет расширен новыми (отсутствующими ранее) словами из словаря: \textit{время, закономерность, изменение, неприятность, повествование, происшествие, ситуация, скандал, случай, событие, тенденция, факт.}
+\parindent=0,5cm
+
+В итоге, вектор свойств будет включать слова: \textit{время, закономерность, изменение,} книга, мир, наука, \textit{неприятность,} образование, \textit{повествование, происшествие,} развитие, рассказ, \textit{ситуация, скандал, случай, тенденция, факт.}
+\parindent=0,5cm
+
+Для оценки результатов тестовым примерам употребления присваивали вручную теги значений. Кластеру присваивалось то значение, примеров употребления которого в нём было больше всего. 
+\parindent=0,5cm
+
+Авторами было проведено 75 экспериментов с использованием 72 слов из корпуса SENSEVAL-2 и со словами \textit{“line”, “hard”} и \textit{“serve”.}
+\parindent=0,5cm
+
+В тестовых данных SENSEVAL-2 примеры употреблений включали 2-3 предложения. Для каждого слова было дано от 50 до 200 примеров употреблений в тестовых и тренировочных данных. Для этих слов известно много (порядка 8-12) значений. Малое число примеров при большем числе значений привело к тому, что для некоторых значений оказалось мало примеров употреблений. 43 из 72 слов SENSEVAL-2 показали улучшение F-меры и полноты (recall) при расширении вектора свойств текстами толкований словаря. Однако для 29 слов F-мера стала хуже, что, возможно, говорит о трудностях и несовершенстве метода. Для окончательной оценки необходима большая экспериментальная база: не десятки слов, а десятки и сотни тысяч.
+\parindent=0,5cm
+
+Данный метод может быть полезен при различении  значений слов без учителя при небольшом количестве обучающих данных.
 
 \section{<<Разрешение многозначности в биомедицинских текстах с помощью методов кластеризации без учителя>>}
 
@@ -463,13 +550,22 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \textit{Епрев, А. С.}Применение контекстных векторов в классификации текстовых документов. 2010. http://jre.cplire.ru/iso/oct10/1/text.html
 
 \bibitem{Abney 1999}
-\textit{Abney, S. and Light, M.}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999. 
+\textit{Abney, S. and Light, M.}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
+
+\bibitem{Berry 1993}
+\textit{M. Berry, T. Do, G. O’Brien, V. Krishna, and S. Varadhan}SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
 
 \bibitem{Ciaramita 2000}
 \textit{Ciaramita, M. and Johnson, M.}Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. 2000. 
 
 \bibitem{COTTRELL 1983}
 \textit{COTTRELL, G. W. and SMALL, S. L.}A connectionist  scheme for modelling word  sense  disambiguation -- Cognition and brain theory. 1983. № 6. P. 89–120. 
+
+\bibitem{Jain 1988}
+\textit{Jain, A. and Dubes, R.}Algorithms for Clustering Data. Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
+
+\bibitem{Jain 1999}
+\textit{A. Jain, M. Murthy, and P. Flynn}Data clustering: a review. ACM Computing Surveys, 31(3):264-323, September 1999.
 
 \bibitem{LESK 1986}
 \textit{LESK, M.}Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone --  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26.  
@@ -479,6 +575,9 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 
 \bibitem{Pedersen 1997}
 \textit{Pedersen, T. and Bruce, R.}Distinguishing word senses in untagged text. Proc.EMNLP.Providence, RI, 1997.
+
+\bibitem{Purandare 2004}
+\textit{Purandare, A. and Pedersen, T.}Improving word sense discrimination with gloss augmented feature vectors // Workshop on Lexical Resources for the Web and Word Sense Disambiguation. – 2004. – С. 123-130. 
 
 \bibitem{Resnik 1997}
 \textit{Resnik, P.}Selectional preference and sense disambiguation. In Proceedings of the ANLP-97 Workshop: Tagging Text with Lexical Semantics: Why, What, and How? 1997.
@@ -504,7 +603,8 @@ Y=A_1x+A_2x^2+\ldots +A_nx^n.
 \bibitem{Weeber 2001}
 \textit{Weeber, M. and Mork, J. and Aronson, A.}Developing a test collection for biomedical word sense disambiguation. Proc. AMIA., 2001.
 
-
+\bibitem{Zhao 2002}
+\textit{Zhao, Y. and Karypis, G.} Evaluation of hierarchical clustering algorithms for document datasets. In Proceedings of the 11th International Conference on Information and Knowledge Management, pages 515-524, McLean, VA, 2002.
 
 
 
